remote db connection instead of local and tidying up model file structure