@@ -1,12 +1,11 @@
 package com.citygroup.db.service;
 
 import com.citygroup.db.entity.TrackingDataEntity;
-import com.citygroup.db.model.TrackingData;
+import com.citygroup.db.model.secondspectrum.TrackingData;
 import com.citygroup.db.repository.TrackingDataRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TrackingDataService {
@@ -17,7 +16,10 @@ public class TrackingDataService {
         this.trackingDataRepository = trackingDataRepository;
     }
 
-    public List<TrackingData> getTrackingDataRange(Long start, Long end) {
-        return trackingDataRepository.findAllByIdGreaterThanEqualAndIdLessThan(start, end).stream().map(TrackingDataEntity::getData).collect(Collectors.toList());
+    public List<TrackingData> getTrackingDataRange(String gameId, Long start, Long end) {
+        return trackingDataRepository.findAllByGameIdEqualsAndIdGreaterThanEqualAndIdLessThan(gameId, start, end)
+                .stream()
+                .map(TrackingDataEntity::getData)
+                .toList();
     }
 }
